pastey-test-suite/tests/ui/nested-group-single-token.stderr
error: Expected either Ident, or Literal.
  --> tests/ui/nested-group-single-token.rs:6:32
   |
 6 |             fn [< foo :replace(($tokens), "bar") >]() {}
   |                                ^^^^^^^^^
...
11 | m!(ident);
   | --------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)
